Fix NavTabs title alignment

--- a/src/core/nav/nav-tabs.module.scss
+++ b/src/core/nav/nav-tabs.module.scss
@@ -60,6 +60,7 @@
 .tab {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   cursor: pointer;
 }
 
